--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -44,8 +44,7 @@
     <string name="allow" msgid="8885707816848569619">"Ооба"</string>
     <string name="deny" msgid="6040983710442068936">"Жок"</string>
     <string name="add" msgid="2894574044585549298">"Кошуу"</string>
-    <!-- no translation found for picker_view_selected (2266031384396143883) -->
-    <skip />
+    <string name="picker_view_selected" msgid="2266031384396143883">"Көрүнүш тандалды"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> колдонмосу <xliff:g id="COUNT">^2</xliff:g> аудио файлды өзгөртсүнбү?</item>
       <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> колдонмосу бул аудио файлды өзгөртсүнбү?</item>
