Support date header and Recent in PhotosTabFragment
- Add DateHeaderHolder
- Update items for date header and recent
- Support ITEM_TYPE_DATE_HEADER in PhotosTabAdapter
- Add DateTimeUtils

Bug: 189732217
Test: Manual. videos on the bug.
Test: atest DateTimeUtilsTest
Test: atest ItemTest
Change-Id: I3e8b7582c743e12548fd44e71e8a5beb079f561f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -88,6 +88,9 @@
     <!-- Select button for PhotoPicker. [CHAR LIMIT=30] -->
     <string name="select">Select</string>
 
+    <!-- Recent header for PhotoPicker. [CHAR LIMIT=50] -->
+    <string name="recent">Recent</string>
+
     <!-- PhotoPicker view selected action text. [CHAR LIMIT=80] -->
     <string name="picker_view_selected">View selected</string>
 
