--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -48,6 +48,10 @@
     <string name="allow" msgid="8885707816848569619">"Дозволити"</string>
     <string name="deny" msgid="6040983710442068936">"Заборонити"</string>
     <string name="add" msgid="2894574044585549298">"Додати"</string>
+    <string name="deselect" msgid="4297825044827769490">"Не вибирати"</string>
+    <string name="select" msgid="2704765470563027689">"Вибрати"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"Переглянути вибране"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Дозволити додатку <xliff:g id="APP_NAME_1">^1</xliff:g> змінити <xliff:g id="COUNT">^2</xliff:g> аудіофайл?</item>
