--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -44,6 +44,10 @@
     <string name="allow" msgid="8885707816848569619">"İcazə verin"</string>
     <string name="deny" msgid="6040983710442068936">"Rədd edin"</string>
     <string name="add" msgid="2894574044585549298">"Əlavə edin"</string>
+    <string name="deselect" msgid="4297825044827769490">"Seçimi ləğv edin"</string>
+    <string name="select" msgid="2704765470563027689">"Seçin"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"Seçilənə baxın"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> tətbiqinə <xliff:g id="COUNT">^2</xliff:g> audio fayla dəyişiklik etmək icazəsi verilsin?</item>
