--- a/res/values-en-rAU/strings.xml
+++ b/res/values-en-rAU/strings.xml
@@ -44,6 +44,9 @@
     <string name="allow" msgid="8885707816848569619">"Allow"</string>
     <string name="deny" msgid="6040983710442068936">"Deny"</string>
     <string name="add" msgid="2894574044585549298">"Add"</string>
+    <string name="deselect" msgid="4297825044827769490">"Deselect"</string>
+    <string name="select" msgid="2704765470563027689">"Select"</string>
+    <string name="recent" msgid="6694613584743207874">"Recent"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"View selected"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Allow <xliff:g id="APP_NAME_1">^1</xliff:g> to modify <xliff:g id="COUNT">^2</xliff:g> audio files?</item>
