--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -44,6 +44,12 @@
     <string name="allow" msgid="8885707816848569619">"Թույլատրել"</string>
     <string name="deny" msgid="6040983710442068936">"Մերժել"</string>
     <string name="add" msgid="2894574044585549298">"Ավելացնել"</string>
+    <!-- no translation found for deselect (4297825044827769490) -->
+    <skip />
+    <!-- no translation found for select (2704765470563027689) -->
+    <skip />
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"Դիտել ընտրությունը"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Թույլատրե՞լ <xliff:g id="APP_NAME_1">^1</xliff:g> հավելվածին վերականգնել <xliff:g id="COUNT">^2</xliff:g> աուդիո ֆայլ աղբարկղից</item>
