--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -44,6 +44,10 @@
     <string name="allow" msgid="8885707816848569619">"დაშვება"</string>
     <string name="deny" msgid="6040983710442068936">"უარყოფა"</string>
     <string name="add" msgid="2894574044585549298">"დამატება"</string>
+    <string name="deselect" msgid="4297825044827769490">"არჩევის გაუქმება"</string>
+    <string name="select" msgid="2704765470563027689">"არჩევა"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"ხედი არჩეულია"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">აძლევთ უფლებას <xliff:g id="APP_NAME_1">^1</xliff:g>-ს, შეცვალოს <xliff:g id="COUNT">^2</xliff:g> აუდიოფაილი?</item>
