--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -44,6 +44,10 @@
     <string name="allow" msgid="8885707816848569619">"허용"</string>
     <string name="deny" msgid="6040983710442068936">"거부"</string>
     <string name="add" msgid="2894574044585549298">"추가"</string>
+    <string name="deselect" msgid="4297825044827769490">"선택 해제"</string>
+    <string name="select" msgid="2704765470563027689">"선택"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"선택 항목 보기"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g>에서 오디오 파일 <xliff:g id="COUNT">^2</xliff:g>개를 수정하도록 허용하시겠습니까?</item>
