--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -44,6 +44,9 @@
     <string name="allow" msgid="8885707816848569619">"Permitir"</string>
     <string name="deny" msgid="6040983710442068936">"Negar"</string>
     <string name="add" msgid="2894574044585549298">"Adicionar"</string>
+    <string name="deselect" msgid="4297825044827769490">"Desmarcar"</string>
+    <string name="select" msgid="2704765470563027689">"Selecionar"</string>
+    <string name="recent" msgid="6694613584743207874">"Recentes"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Ver selecionado"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Permitir que o app <xliff:g id="APP_NAME_1">^1</xliff:g> modifique <xliff:g id="COUNT">^2</xliff:g> arquivo de áudio?</item>
