--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -44,6 +44,10 @@
     <string name="allow" msgid="8885707816848569619">"ඉඩ දෙන්න"</string>
     <string name="deny" msgid="6040983710442068936">"ප්‍රතික්ෂේප කරන්න"</string>
     <string name="add" msgid="2894574044585549298">"එක් කරන්න"</string>
+    <string name="deselect" msgid="4297825044827769490">"නොතෝරන්න"</string>
+    <string name="select" msgid="2704765470563027689">"තෝරන්න"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"තෝරා ගත් දේවල් බලන්න"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>ට ඕඩියෝ ගොනු <xliff:g id="COUNT">^2</xliff:g>ක් වෙනස් කිරීමට ඉඩ දෙන්නද?</item>
