--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -48,6 +48,10 @@
     <string name="allow" msgid="8885707816848569619">"Dovoli"</string>
     <string name="deny" msgid="6040983710442068936">"Zavrni"</string>
     <string name="add" msgid="2894574044585549298">"Dodaj"</string>
+    <string name="deselect" msgid="4297825044827769490">"Počisti izbiro"</string>
+    <string name="select" msgid="2704765470563027689">"Izberi"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"Prikaži izbrano"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Želite dovoliti aplikaciji <xliff:g id="APP_NAME_1">^1</xliff:g>, da spremeni <xliff:g id="COUNT">^2</xliff:g> zvočno datoteko?</item>
