--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -44,6 +44,10 @@
     <string name="allow" msgid="8885707816848569619">"İzin ver"</string>
     <string name="deny" msgid="6040983710442068936">"Reddet"</string>
     <string name="add" msgid="2894574044585549298">"Ekle"</string>
+    <string name="deselect" msgid="4297825044827769490">"Seçimi kaldır"</string>
+    <string name="select" msgid="2704765470563027689">"Seç"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
+    <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"Seçilenleri görüntüle"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> uygulamasının <xliff:g id="COUNT">^2</xliff:g> ses dosyasını değiştirmesine izin verilsin mi?</item>
