--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -44,8 +44,11 @@
     <string name="allow" msgid="8885707816848569619">"允许"</string>
     <string name="deny" msgid="6040983710442068936">"拒绝"</string>
     <string name="add" msgid="2894574044585549298">"添加"</string>
-    <!-- no translation found for picker_view_selected (2266031384396143883) -->
+    <string name="deselect" msgid="4297825044827769490">"取消选择"</string>
+    <string name="select" msgid="2704765470563027689">"选择"</string>
+    <!-- no translation found for recent (6694613584743207874) -->
     <skip />
+    <string name="picker_view_selected" msgid="2266031384396143883">"查看所选内容"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">要允许<xliff:g id="APP_NAME_1">^1</xliff:g>修改这 <xliff:g id="COUNT">^2</xliff:g> 个音频文件吗？</item>
       <item quantity="one">要允许<xliff:g id="APP_NAME_0">^1</xliff:g>修改这个音频文件吗？</item>
