--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -50,8 +50,7 @@
     <string name="add" msgid="2894574044585549298">"Přidat"</string>
     <string name="deselect" msgid="4297825044827769490">"Zrušit výběr"</string>
     <string name="select" msgid="2704765470563027689">"Vybrat"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"Aktuální"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Zobrazit vybrané"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="few">Povolit aplikaci <xliff:g id="APP_NAME_1">^1</xliff:g> upravit <xliff:g id="COUNT">^2</xliff:g> zvukové soubory?</item>
