--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -44,10 +44,8 @@
     <string name="allow" msgid="8885707816848569619">"મંજૂરી આપો"</string>
     <string name="deny" msgid="6040983710442068936">"નકારો"</string>
     <string name="add" msgid="2894574044585549298">"ઉમેરો"</string>
-    <!-- no translation found for deselect (4297825044827769490) -->
-    <skip />
-    <!-- no translation found for select (2704765470563027689) -->
-    <skip />
+    <string name="deselect" msgid="4297825044827769490">"નાપસંદ કરો"</string>
+    <string name="select" msgid="2704765470563027689">"પસંદ કરો"</string>
     <!-- no translation found for recent (6694613584743207874) -->
     <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"પસંદ કરેલી ટેક્સ્ટ જુઓ"</string>
