--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -46,8 +46,7 @@
     <string name="add" msgid="2894574044585549298">"Aggiungi"</string>
     <string name="deselect" msgid="4297825044827769490">"Deseleziona"</string>
     <string name="select" msgid="2704765470563027689">"Seleziona"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"Recenti"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Visualizza selezione"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Consentire all\'app <xliff:g id="APP_NAME_1">^1</xliff:g> di modificare <xliff:g id="COUNT">^2</xliff:g> file audio?</item>
