--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -46,8 +46,7 @@
     <string name="add" msgid="2894574044585549298">"Кошуу"</string>
     <string name="deselect" msgid="4297825044827769490">"Тандоодон чыгаруу"</string>
     <string name="select" msgid="2704765470563027689">"Тандоо"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"Акыркы"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Көрүнүш тандалды"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> колдонмосу <xliff:g id="COUNT">^2</xliff:g> аудио файлды өзгөртсүнбү?</item>
