--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -48,8 +48,7 @@
     <string name="add" msgid="2894574044585549298">"Pievienot"</string>
     <string name="deselect" msgid="4297825044827769490">"Noņemt atlasi"</string>
     <string name="select" msgid="2704765470563027689">"Atlasīt"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"Jaunākie"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Skatīt atlasīto"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="zero">Vai atļaut lietotnei <xliff:g id="APP_NAME_1">^1</xliff:g> modificēt <xliff:g id="COUNT">^2</xliff:g> audio failus?</item>
