--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -46,8 +46,7 @@
     <string name="add" msgid="2894574044585549298">"เพิ่ม"</string>
     <string name="deselect" msgid="4297825044827769490">"ยกเลิกการเลือก"</string>
     <string name="select" msgid="2704765470563027689">"เลือก"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"ล่าสุด"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"ดูรายการที่เลือก"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">อนุญาตให้ <xliff:g id="APP_NAME_1">^1</xliff:g> แก้ไขไฟล์เสียง <xliff:g id="COUNT">^2</xliff:g> ไฟล์ไหม</item>
