--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -44,10 +44,8 @@
     <string name="allow" msgid="8885707816848569619">"اجازت دیں"</string>
     <string name="deny" msgid="6040983710442068936">"مسترد کریں"</string>
     <string name="add" msgid="2894574044585549298">"شامل کریں"</string>
-    <!-- no translation found for deselect (4297825044827769490) -->
-    <skip />
-    <!-- no translation found for select (2704765470563027689) -->
-    <skip />
+    <string name="deselect" msgid="4297825044827769490">"غیر منتخب کریں"</string>
+    <string name="select" msgid="2704765470563027689">"منتخب کریں"</string>
     <!-- no translation found for recent (6694613584743207874) -->
     <skip />
     <string name="picker_view_selected" msgid="2266031384396143883">"منتخب کردہ دیکھیں"</string>
