--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -46,8 +46,7 @@
     <string name="add" msgid="2894574044585549298">"Thêm"</string>
     <string name="deselect" msgid="4297825044827769490">"Bỏ chọn"</string>
     <string name="select" msgid="2704765470563027689">"Chọn"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"Gần đây"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Đã chọn Chế độ xem"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Cho phép <xliff:g id="APP_NAME_1">^1</xliff:g> sửa đổi <xliff:g id="COUNT">^2</xliff:g> tệp âm thanh?</item>
