--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -46,8 +46,7 @@
     <string name="add" msgid="2894574044585549298">"ઉમેરો"</string>
     <string name="deselect" msgid="4297825044827769490">"નાપસંદ કરો"</string>
     <string name="select" msgid="2704765470563027689">"પસંદ કરો"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"તાજેતરના"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"પસંદ કરેલી ટેક્સ્ટ જુઓ"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>ને <xliff:g id="COUNT">^2</xliff:g> ઑડિયો ફાઇલમાં ફેરફાર કરવાની મંજૂરી આપીએ?</item>
