--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -44,12 +44,9 @@
     <string name="allow" msgid="8885707816848569619">"अनुमती द्या"</string>
     <string name="deny" msgid="6040983710442068936">"नकार द्या"</string>
     <string name="add" msgid="2894574044585549298">"जोडा"</string>
-    <!-- no translation found for deselect (4297825044827769490) -->
-    <skip />
-    <!-- no translation found for select (2704765470563027689) -->
-    <skip />
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="deselect" msgid="4297825044827769490">"निवड रद्द करा"</string>
+    <string name="select" msgid="2704765470563027689">"निवडा"</string>
+    <string name="recent" msgid="6694613584743207874">"अलीकडील"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"दृश्य निवडले"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> ला <xliff:g id="COUNT">^2</xliff:g> ऑडिओ फाइल सुधारित करण्याची परवानगी द्यायची आहे का?</item>
