--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -44,12 +44,9 @@
     <string name="allow" msgid="8885707816848569619">"अनुमति दिनुहोस्"</string>
     <string name="deny" msgid="6040983710442068936">"अस्वीकार गर्नुहोस्"</string>
     <string name="add" msgid="2894574044585549298">"हाल्नुहोस्"</string>
-    <!-- no translation found for deselect (4297825044827769490) -->
-    <skip />
-    <!-- no translation found for select (2704765470563027689) -->
-    <skip />
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="deselect" msgid="4297825044827769490">"चयन रद्द गर्नुहोस्"</string>
+    <string name="select" msgid="2704765470563027689">"चयन गर्नुहोस्"</string>
+    <string name="recent" msgid="6694613584743207874">"हालसालैका"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"चयन गरिएका फोटो तथा भिडियोहरू हेर्नुहोस्"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> लाई यी <xliff:g id="COUNT">^2</xliff:g> अडियो फाइलहरू परिमार्जन गर्न दिने हो?</item>
