--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -44,12 +44,9 @@
     <string name="allow" msgid="8885707816848569619">"ਆਗਿਆ ਦਿਓ"</string>
     <string name="deny" msgid="6040983710442068936">"ਮਨ੍ਹਾ ਕਰੋ"</string>
     <string name="add" msgid="2894574044585549298">"ਸ਼ਾਮਲ ਕਰੋ"</string>
-    <!-- no translation found for deselect (4297825044827769490) -->
-    <skip />
-    <!-- no translation found for select (2704765470563027689) -->
-    <skip />
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="deselect" msgid="4297825044827769490">"ਅਣ-ਚੁਣਿਆ ਕਰੋ"</string>
+    <string name="select" msgid="2704765470563027689">"ਚੁਣੋ"</string>
+    <string name="recent" msgid="6694613584743207874">"ਹਾਲੀਆ"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"ਚੁਣੀ ਗਈ ਕਾਰਵਾਈ ਦੇਖੋ"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">ਕੀ <xliff:g id="APP_NAME_1">^1</xliff:g> ਨੂੰ <xliff:g id="COUNT">^2</xliff:g> ਆਡੀਓ ਫ਼ਾਈਲ ਨੂੰ ਸੋਧਣ ਦੇਣਾ ਹੈ?</item>
