--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -46,8 +46,7 @@
     <string name="add" msgid="2894574044585549298">"شامل کریں"</string>
     <string name="deselect" msgid="4297825044827769490">"غیر منتخب کریں"</string>
     <string name="select" msgid="2704765470563027689">"منتخب کریں"</string>
-    <!-- no translation found for recent (6694613584743207874) -->
-    <skip />
+    <string name="recent" msgid="6694613584743207874">"حالیہ"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"منتخب کردہ دیکھیں"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> کو <xliff:g id="COUNT">^2</xliff:g> آڈیو فائلز میں ترمیم کرنے کی اجازت دیں؟</item>
