--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -48,6 +48,13 @@
     <string name="select" msgid="2704765470563027689">"Избиране"</string>
     <string name="recent" msgid="6694613584743207874">"Скорошно"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Преглед на избраното"</string>
+    <string name="picker_photos" msgid="7415035516411087392">"Снимки"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"Албуми"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> елемента</item>
+      <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> елемент</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Добавяне (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Да се разреши ли на <xliff:g id="APP_NAME_1">^1</xliff:g> да промени <xliff:g id="COUNT">^2</xliff:g> аудиофайла?</item>
       <item quantity="one">Да се разреши ли на <xliff:g id="APP_NAME_0">^1</xliff:g> да промени този аудиофайл?</item>
