--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -48,6 +48,13 @@
     <string name="select" msgid="2704765470563027689">"Select"</string>
     <string name="recent" msgid="6694613584743207874">"Recent"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"View selected"</string>
+    <string name="picker_photos" msgid="7415035516411087392">"Photos"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"Albums"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> items</item>
+      <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> item</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Add (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Allow <xliff:g id="APP_NAME_1">^1</xliff:g> to modify <xliff:g id="COUNT">^2</xliff:g> audio files?</item>
       <item quantity="one">Allow <xliff:g id="APP_NAME_0">^1</xliff:g> to modify this audio file?</item>
