--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -48,6 +48,13 @@
     <string name="select" msgid="2704765470563027689">"选择"</string>
     <string name="recent" msgid="6694613584743207874">"最近"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"查看所选内容"</string>
+    <!-- no translation found for picker_photos (7415035516411087392) -->
+    <skip />
+    <!-- no translation found for picker_albums (4822511902115299142) -->
+    <skip />
+    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
+    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">要允许<xliff:g id="APP_NAME_1">^1</xliff:g>修改这 <xliff:g id="COUNT">^2</xliff:g> 个音频文件吗？</item>
       <item quantity="one">要允许<xliff:g id="APP_NAME_0">^1</xliff:g>修改这个音频文件吗？</item>
