Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: If393ab1f6872ffcc0e0e6e9bb079bf36cc192e97

--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -27,7 +27,7 @@
     <string name="root_documents" msgid="3829103301363849237">"कागजातहरू"</string>
     <string name="permission_required" msgid="1460820436132943754">"यो वस्तु परिमार्जन गर्न वा मेटाउन अनुमति आवश्यक पर्छ।"</string>
     <string name="permission_required_action" msgid="706370952366113539">"जारी राख्नुहोस्"</string>
-    <string name="grant_dialog_button_allow" msgid="1644287024501033471">"अनुमति दिनुहोस्"</string>
+    <string name="grant_dialog_button_allow" msgid="1644287024501033471">"अनुमति दिइयोस्"</string>
     <string name="grant_dialog_button_deny" msgid="6190589471415815741">"अनुमति नदिनुहोस्"</string>
     <plurals name="permission_more_thumb" formatted="false" msgid="4392079224649478923">
       <item quantity="other">+<xliff:g id="COUNT_1">^1</xliff:g></item>
