--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -48,13 +48,13 @@
     <string name="select" msgid="2704765470563027689">"বাছনি কৰক"</string>
     <string name="recent" msgid="6694613584743207874">"শেহতীয়া"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"ভিউ বাছনি কৰা হৈছে"</string>
-    <!-- no translation found for picker_photos (7415035516411087392) -->
-    <skip />
-    <!-- no translation found for picker_albums (4822511902115299142) -->
-    <skip />
-    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
-    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
-    <skip />
+    <string name="picker_photos" msgid="7415035516411087392">"ফট’"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"এলবাম"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="one"><xliff:g id="COUNT_1">^1</xliff:g> টা বস্তু</item>
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> টা বস্তু</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"(<xliff:g id="COUNT">^1</xliff:g> টা) যোগ দিয়ক"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>ক <xliff:g id="COUNT">^2</xliff:g> টা অডিঅ’ ফাইল সংশোধন কৰিবলৈ অনুমতি দিবনে?</item>
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g>ক <xliff:g id="COUNT">^2</xliff:g> টা অডিঅ’ ফাইল সংশোধন কৰিবলৈ অনুমতি দিবনে?</item>
