--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -52,13 +52,15 @@
     <string name="select" msgid="2704765470563027689">"בחירה"</string>
     <string name="recent" msgid="6694613584743207874">"אחרונות"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"הצגת הפריטים שנבחרו"</string>
-    <!-- no translation found for picker_photos (7415035516411087392) -->
-    <skip />
-    <!-- no translation found for picker_albums (4822511902115299142) -->
-    <skip />
-    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
-    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
-    <skip />
+    <string name="picker_photos" msgid="7415035516411087392">"תמונות"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"אלבומים"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="two"><xliff:g id="COUNT_1">^1</xliff:g> פריטים</item>
+      <item quantity="many"><xliff:g id="COUNT_1">^1</xliff:g> פריטים</item>
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> פריטים</item>
+      <item quantity="one">פריט אחד (<xliff:g id="COUNT_0">^1</xliff:g>)</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"הוספה (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="two">לאפשר לאפליקציה <xliff:g id="APP_NAME_1">^1</xliff:g> לשנות <xliff:g id="COUNT">^2</xliff:g> קובצי אודיו?</item>
       <item quantity="many">לאפשר לאפליקציה <xliff:g id="APP_NAME_1">^1</xliff:g> לשנות <xliff:g id="COUNT">^2</xliff:g> קובצי אודיו?</item>
