--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -52,13 +52,15 @@
     <string name="select" msgid="2704765470563027689">"Pasirinkti"</string>
     <string name="recent" msgid="6694613584743207874">"Naujausios"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Žiūrėti pasirinktus"</string>
-    <!-- no translation found for picker_photos (7415035516411087392) -->
-    <skip />
-    <!-- no translation found for picker_albums (4822511902115299142) -->
-    <skip />
-    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
-    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
-    <skip />
+    <string name="picker_photos" msgid="7415035516411087392">"Nuotraukos"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"Albumai"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="one"><xliff:g id="COUNT_1">^1</xliff:g> elementas</item>
+      <item quantity="few"><xliff:g id="COUNT_1">^1</xliff:g> elementai</item>
+      <item quantity="many"><xliff:g id="COUNT_1">^1</xliff:g> elemento</item>
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> elementų</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Pridėti (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Leisti programai „<xliff:g id="APP_NAME_1">^1</xliff:g>“ keisti <xliff:g id="COUNT">^2</xliff:g> garso failą?</item>
       <item quantity="few">Leisti programai „<xliff:g id="APP_NAME_1">^1</xliff:g>“ keisti <xliff:g id="COUNT">^2</xliff:g> garso failus?</item>
