--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -27,7 +27,7 @@
     <string name="root_documents" msgid="3829103301363849237">"कागजातहरू"</string>
     <string name="permission_required" msgid="1460820436132943754">"यो वस्तु परिमार्जन गर्न वा मेटाउन अनुमति आवश्यक पर्छ।"</string>
     <string name="permission_required_action" msgid="706370952366113539">"जारी राख्नुहोस्"</string>
-    <string name="grant_dialog_button_allow" msgid="1644287024501033471">"अनुमति दिनुहोस्"</string>
+    <string name="grant_dialog_button_allow" msgid="1644287024501033471">"अनुमति दिइयोस्"</string>
     <string name="grant_dialog_button_deny" msgid="6190589471415815741">"अनुमति नदिनुहोस्"</string>
     <plurals name="permission_more_thumb" formatted="false" msgid="4392079224649478923">
       <item quantity="other">+<xliff:g id="COUNT_1">^1</xliff:g></item>
@@ -48,13 +48,13 @@
     <string name="select" msgid="2704765470563027689">"चयन गर्नुहोस्"</string>
     <string name="recent" msgid="6694613584743207874">"हालसालैका"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"चयन गरिएका फोटो तथा भिडियोहरू हेर्नुहोस्"</string>
-    <!-- no translation found for picker_photos (7415035516411087392) -->
-    <skip />
-    <!-- no translation found for picker_albums (4822511902115299142) -->
-    <skip />
-    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
-    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
-    <skip />
+    <string name="picker_photos" msgid="7415035516411087392">"फोटोहरू"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"एल्बमहरू"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> वटा वस्तु</item>
+      <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> वस्तु</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"थप्नुहोस् (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="APP_NAME_1">^1</xliff:g> लाई यी <xliff:g id="COUNT">^2</xliff:g> अडियो फाइलहरू परिमार्जन गर्न दिने हो?</item>
       <item quantity="one"><xliff:g id="APP_NAME_0">^1</xliff:g> लाई यो अडियो फाइल परिमार्जन गर्न दिने हो?</item>
