--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -52,13 +52,15 @@
     <string name="select" msgid="2704765470563027689">"Vybrať"</string>
     <string name="recent" msgid="6694613584743207874">"Nedávne"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Zobraziť vybrané"</string>
-    <!-- no translation found for picker_photos (7415035516411087392) -->
-    <skip />
-    <!-- no translation found for picker_albums (4822511902115299142) -->
-    <skip />
-    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
-    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
-    <skip />
+    <string name="picker_photos" msgid="7415035516411087392">"Fotky"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"Albumy"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="few"><xliff:g id="COUNT_1">^1</xliff:g> položky</item>
+      <item quantity="many"><xliff:g id="COUNT_1">^1</xliff:g> items</item>
+      <item quantity="other"><xliff:g id="COUNT_1">^1</xliff:g> položiek</item>
+      <item quantity="one"><xliff:g id="COUNT_0">^1</xliff:g> položka</item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Pridať (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="few">Chcete povoliť aplikácii <xliff:g id="APP_NAME_1">^1</xliff:g> upraviť <xliff:g id="COUNT">^2</xliff:g> zvukové súbory?</item>
       <item quantity="many">Allow <xliff:g id="APP_NAME_1">^1</xliff:g> to modify <xliff:g id="COUNT">^2</xliff:g> audio files?</item>
