Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I9552966021507085fc285190983bcaace08bdb6e

--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -239,7 +239,7 @@
       <item quantity="other">Odstraňuje sa <xliff:g id="COUNT">^1</xliff:g> položiek…</item>
       <item quantity="one">Odstraňuje sa položka…</item>
     </plurals>
-    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> nemôže spracúvať súbory médií"</string>
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> nemôže spracovať súbory médií"</string>
     <string name="transcode_processing_cancelled" msgid="5340383917746945590">"Spracúvanie médií bolo zrušené"</string>
     <string name="transcode_processing_error" msgid="8921643164508407874">"Pri spracúvaní médií sa vyskytla chyba"</string>
     <string name="transcode_processing_success" msgid="447288876429730122">"Médiá boli úspešne spracované"</string>
