--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -183,7 +183,7 @@
       <item quantity="other">항목 <xliff:g id="COUNT">^1</xliff:g>개 삭제 중…</item>
       <item quantity="one">항목 삭제 중…</item>
     </plurals>
-    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>에서 미디어 파일을 처리할 수 없습니다"</string>
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>에서 미디어 파일을 처리할 수 없습니다."</string>
     <string name="transcode_processing_cancelled" msgid="5340383917746945590">"미디어 처리 취소됨"</string>
     <string name="transcode_processing_error" msgid="8921643164508407874">"미디어 처리 오류"</string>
     <string name="transcode_processing_success" msgid="447288876429730122">"미디어 처리 성공"</string>
