--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -50,6 +50,7 @@
     <string name="add" msgid="2894574044585549298">"Добавить"</string>
     <string name="deselect" msgid="4297825044827769490">"Отменить выбор"</string>
     <string name="select" msgid="2704765470563027689">"Выбрать"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"Недавние"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Смотреть выбранное"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Фотографии"</string>
