--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -54,6 +54,7 @@
     <string name="add" msgid="2894574044585549298">"إضافة"</string>
     <string name="deselect" msgid="4297825044827769490">"إلغاء الاختيار"</string>
     <string name="select" msgid="2704765470563027689">"اختيار"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"الأحدث"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"عرض المحتوى المحدّد"</string>
     <string name="picker_photos" msgid="7415035516411087392">"الصور"</string>
