--- a/res/values-en-rIN/strings.xml
+++ b/res/values-en-rIN/strings.xml
@@ -46,6 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Add"</string>
     <string name="deselect" msgid="4297825044827769490">"Deselect"</string>
     <string name="select" msgid="2704765470563027689">"Select"</string>
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">Select up to <xliff:g id="COUNT_1">^1</xliff:g> items</item>
+      <item quantity="one">Select up to <xliff:g id="COUNT_0">^1</xliff:g> item</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Recent"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"View selected"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Photos"</string>
