--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -46,6 +46,7 @@
     <string name="add" msgid="2894574044585549298">"Кошуу"</string>
     <string name="deselect" msgid="4297825044827769490">"Тандоодон чыгаруу"</string>
     <string name="select" msgid="2704765470563027689">"Тандоо"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"Акыркы"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Көрүнүш тандалды"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Сүрөттөр"</string>
