--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -46,6 +46,7 @@
     <string name="add" msgid="2894574044585549298">"हाल्नुहोस्"</string>
     <string name="deselect" msgid="4297825044827769490">"चयन रद्द गर्नुहोस्"</string>
     <string name="select" msgid="2704765470563027689">"चयन गर्नुहोस्"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"हालसालैका"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"चयन गरिएका फोटो तथा भिडियोहरू हेर्नुहोस्"</string>
     <string name="picker_photos" msgid="7415035516411087392">"फोटोहरू"</string>
