--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -46,6 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Toevoegen"</string>
     <string name="deselect" msgid="4297825044827769490">"Deselecteren"</string>
     <string name="select" msgid="2704765470563027689">"Selecteren"</string>
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="other">Selecteer maximaal <xliff:g id="COUNT_1">^1</xliff:g> items</item>
+      <item quantity="one">Selecteer maximaal <xliff:g id="COUNT_0">^1</xliff:g> item</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Recent"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Selectie bekijken"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Foto\'s"</string>
