--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -46,6 +46,10 @@
     <string name="add" msgid="2894574044585549298">"Adicionar"</string>
     <string name="deselect" msgid="4297825044827769490">"Desmarcar"</string>
     <string name="select" msgid="2704765470563027689">"Selecionar"</string>
+    <plurals name="select_up_to" formatted="false" msgid="2878367759927215675">
+      <item quantity="one">Selecione até <xliff:g id="COUNT_1">^1</xliff:g> item</item>
+      <item quantity="other">Selecione até <xliff:g id="COUNT_1">^1</xliff:g> itens</item>
+    </plurals>
     <string name="recent" msgid="6694613584743207874">"Recentes"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Ver selecionado"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Fotos"</string>
