--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -48,6 +48,7 @@
     <string name="add" msgid="2894574044585549298">"Adăugați"</string>
     <string name="deselect" msgid="4297825044827769490">"Debifați"</string>
     <string name="select" msgid="2704765470563027689">"Selectați"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"Recente"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Vedeți elementele selectate"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Fotografii"</string>
