--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -50,6 +50,7 @@
     <string name="add" msgid="2894574044585549298">"Pridať"</string>
     <string name="deselect" msgid="4297825044827769490">"Zrušiť výber"</string>
     <string name="select" msgid="2704765470563027689">"Vybrať"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"Nedávne"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Zobraziť vybrané"</string>
     <string name="picker_photos" msgid="7415035516411087392">"Fotky"</string>
