--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -46,6 +46,7 @@
     <string name="add" msgid="2894574044585549298">"சேர்"</string>
     <string name="deselect" msgid="4297825044827769490">"தேர்வுநீக்கு"</string>
     <string name="select" msgid="2704765470563027689">"தேர்ந்தெடு"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"சமீபத்தியவை"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"தேர்ந்தெடுத்தவற்றைக் காட்டு"</string>
     <string name="picker_photos" msgid="7415035516411087392">"படங்கள்"</string>
