--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -46,6 +46,7 @@
     <string name="add" msgid="2894574044585549298">"新增"</string>
     <string name="deselect" msgid="4297825044827769490">"取消選取"</string>
     <string name="select" msgid="2704765470563027689">"選取"</string>
+    <!-- no translation found for select_up_to (2878367759927215675) -->
     <string name="recent" msgid="6694613584743207874">"最近"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"查看所選項目"</string>
     <string name="picker_photos" msgid="7415035516411087392">"相片"</string>
